# lightning-compute-protocol

./: .envrc  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docs.json  flake.nix  plan-go-lcpd-envrc.md  plan.md
.github/: labeler.yml
.github/release-drafter/: go-lcpd.yml  openai-serve.yml  proto-go.yml
.github/workflows/: docs.yml  labeler.yml  openai-serve.yml  proto-go.yml  release-drafter.yml  test.yml
apps/lcp-quickstart/: Makefile  README.md  go.mod  spec.md
apps/ldk-lcp-node/: .envrc  Cargo.toml  build.rs  regtest.md  spec.md
apps/ldk-lcp-node/scripts/: regtest-smoke.sh
apps/ldk-lcp-node/src/: broadcaster.rs  config.rs  custom_message.rs  fee_estimator.rs  ldk_logger.rs  main.rs  node.rs  seed.rs  store.rs  wallet.rs
apps/openai-serve/: .envrc.sample  .gitignore  .golangci.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum
docs/: docs.json  index-ja.mdx  index.mdx
docs/go-lcpd/: spec-ja.md  spec.md
docs/go-lcpd/docs/: background-ja.md  background.md  cli-ja.md  cli.md  configuration-ja.md  (+10 more)
docs/lcp-quickstart/: overview-ja.mdx  overview.mdx
docs/openai-serve/: configuration-ja.mdx  configuration.mdx  overview-ja.mdx  overview.mdx
docs/protocol/: AGENTS.md  protocol-ja.md  protocol.md
docs/scripts/: check-docs-json.mjs
go-lcpd/: .envrc.sample  .gitignore  AGENTS.md  Makefile  README.md  WhatYouSeeIsWhatItDoes.md  buf.gen.yaml  buf.yaml  config.yaml  config.yaml.sample  flake.nix  go.mod  go.sum  lcpd.env.sample  myconf.yaml  provider.devnet.yaml  spec.md
go-lcpd/docs/: configuration.md  devnet.md  quickstart-mainnet.md  regtest.md
go-lcpd/scripts/: devnet  lcpd-grpcd  update-lnd-stubs
plans/: lcp-quickstart-cli.md  ldk-lcp-node-mvp.md
proto-go/: README.md  buf.gen.yaml  go.mod  go.sum
protocol/: AGENTS.md  protocol.md
workflows/: ci.yml  test.yml
(+150 files in other folders)
